--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<p>ESM 267 Homework 2</p>
-<p> Kirby Bartlett </p>
-<p> November 11, 2019 </p>
+<p>web map of ESM 263 assignment 2: Santa Barbara level rise scenarios</p>
 
-<iframe<
+<iframe
     marginheight=0
     marginwidth=0
     scrolling=no
 
     height=1326
     width=1224
-    src="qgis2web/BullTrout.html">
+    src="qgis2web/index.html">
 </iframe>
